# diy-mnist-nn

./: .gitconfig  .gitignore  README.md  notebook.ipynb  pyproject.toml
notebooks/: .gitconfig  autograd_101.ipynb  benchmark_matmul.ipynb  binary_mnist.ipynb  gradient_descent_101.ipynb  pytorch_mnist.ipynb  pytorch_regression.ipynb
src/: __init__.py  test_default.py  value.py
