[tool.poetry]
name = "diy-mnist-nn"
version = "0.1.0"
description = ""
authors = ["Philipp Fischer <philipp.fischer@js-soft.com>"]
readme = "README.md"
packages = [{ include = "src" }, ]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
pytest = "^8.3.3"
black = "^24.10.0"
torch = "^2.5.0"
plotly = "^5.24.1"
pandas = "^2.2.3"
ipykernel = "^6.29.5"

[tool.black]
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
